feat: adição de tela "milkshakes" com componentes.