@@ -62,6 +62,10 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>17</release>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.base/com.sun.javafx.event=ALL-UNNAMED</arg>
+                      </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
